# aiSlideAgent

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  ai_slide_generator_flow_v2.py  app.py  app.py.backup  climate_research.json  create_app_fixed.sh  create_test_json.py  ml_research.md  pyproject.toml  pytest.ini  quantum_research.json  quantum_research_high.json  run_slides.py  test_basic_1.py
.github/workflows/: test.yml
agents/: __init__.py
agents/image_fetch/: __init__.py  image_fetch.py
agents/monitoring/: __init__.py  orchestrator.py
agents/outline/: __init__.py  outline.py
agents/refiner/: __init__.py  content.py  refiner.py  wcag.py
agents/research/: __init__.py  api.py  credibility.py  fallback.py  knowledge_gaps.py  models.py  research.py  search_engine.py  summarization.py  utils.py
agents/slide_writer/: __init__.py  generators.py  models.py  renderer.py  slide_template.py  slide_writer.py  template_registry.py  themes.py
agents/template_selector/: __init__.py  template_selector.py
flow/: ai_slide_generator_flow.html  ai_slide_generator_flow.py
monitoring/: monitoring.py
reports/: bug.txt  flow1.txt  flow2.txt  proposal.txt  remove.txt  summary.txt
reports/Dev/: 工程1.txt  (+7 more)
static/: tailwind.css
templates/: _slide_content.html  _slide_image.html  _slide_profile.html  _slide_quote.html  _slide_timeline.html  _slide_title.html  presentation.html
tests/: conftest.py  test_json_to_slides.py  test_research_outline.py
utils/: __init__.py  cli_utils.py  data_store.py  html_utils.py  logging_setup.py  slide_generator.py
(+7 files in other folders)
